WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
18118
SVG multichar glyph matching matches longest instead of first (affects Acid3 test 79)
https://bugs.webkit.org/show_bug.cgi?id=18118
Summary
SVG multichar glyph matching matches longest instead of first (affects Acid3 ...
Maciej Stachowiak
Reported
2008-03-26 12:13:47 PDT
Our SVG font code picks the longest glyph that matches, when really it should be picking the first in document order. Fixing this requires changing the glyph map data structure.
Attachments
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2008-04-13 22:51:19 PDT
This was fixed already.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug