WebCore:

2008-03-26  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

        - fixed "SVG multichar glyph matching matches longest instead of first (affects Acid3 test 79)"
        http://bugs.webkit.org/show_bug.cgi?id=18118

        * svg/SVGFont.cpp:
        (WebCore::SVGTextRunWalker::walk):
        * svg/SVGFontElement.cpp:
        (WebCore::SVGFontElement::SVGFontElement):
        (WebCore::SVGFontElement::addGlyphToCache):
        (WebCore::SVGFontElement::removeGlyphFromCache):
        (WebCore::SVGFontElement::ensureGlyphCache):
        (WebCore::SVGFontElement::getGlyphIdentifiersForString):
        * svg/SVGFontElement.h:
        * svg/SVGGlyphElement.h:
        (WebCore::SVGGlyphIdentifier::SVGGlyphIdentifier):
        * svg/SVGGlyphMap.h: Added. New radix tree based glyph map.
        (WebCore::GlyphMapNode::GlyphMapNode):
        (WebCore::SVGGlyphMap::SVGGlyphMap):
        (WebCore::SVGGlyphMap::add):
        (WebCore::SVGGlyphMap::compareGlyphPriority):
        (WebCore::SVGGlyphMap::get):
        (WebCore::SVGGlyphMap::clear):

LayoutTests:

2008-03-26  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

        - test updates for "SVG multichar glyph matching matches longest instead of first (affects Acid3 test 79)"
        http://bugs.webkit.org/show_bug.cgi?id=18118

        These test cases were already checking for this exact bug and now
        render correctly.

        * platform/mac/svg/W3C-SVG-1.1/fonts-glyph-02-t-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/fonts-glyph-04-t-expected.txt:



Canonical link: https://commits.webkit.org/24990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31324 268f45cc-cd09-0410-ab3c-d52691b4dbfc