WebCore/svg/SVGFont.cpp
@@ -29,6 +29,7 @@
 #include "SimpleFontData.h"
 #include "SVGFontData.h"
 #include "SVGGlyphElement.h"
+#include "SVGGlyphMap.h"
 #include "SVGFontElement.h"
 #include "SVGFontFaceElement.h"
 #include "SVGMissingGlyphElement.h"
@@ -241,9 +242,6 @@ struct SVGTextRunWalker {
         // Should hold true for SVG text, otherwhise sth. is wrong
         ASSERT(to - from == run.length());
 
-        int maximumHashKeyLength = m_fontElement->maximumHashKeyLength();
-        ASSERT(maximumHashKeyLength >= 0);
-
         Vector<SVGGlyphIdentifier::ArabicForm> chars(charactersWithArabicForm(String(run.data(from), run.length()), run.rtl()));
 
         SVGGlyphIdentifier identifier;
@@ -255,37 +253,33 @@ struct SVGTextRunWalker {
             // If characterLookupRange is > 0, then the font defined ligatures (length of unicode property value > 1).
             // We have to check wheter the current character & the next character define a ligature. This needs to be
             // extended to the n-th next character (where n is 'characterLookupRange'), to check for any possible ligature.
-            characterLookupRange = maximumHashKeyLength + i >= endOfScanRange ? endOfScanRange - i : maximumHashKeyLength;
+            characterLookupRange = endOfScanRange - i;
 
-            // FIXME: instead of checking from longest string to shortest, this should really scan in order
-            // of the glyphs and pick the first match
-            while (characterLookupRange > 0 && !foundGlyph) {
-                String lookupString(run.data(run.rtl() ? run.length() - (i + characterLookupRange) : i), characterLookupRange);
+            String lookupString(run.data(run.rtl() ? run.length() - (i + characterLookupRange) : i), characterLookupRange);
 
-                Vector<SVGGlyphIdentifier> glyphs = m_fontElement->glyphIdentifiersForString(lookupString);
-                Vector<SVGGlyphIdentifier>::iterator it = glyphs.begin();
-                Vector<SVGGlyphIdentifier>::iterator end = glyphs.end();
-
-                for (; it != end; ++it) {
-                    identifier = *it;
-
-                    unsigned int startPosition = run.rtl() ? run.length() - (i + lookupString.length()) : i;
-                    unsigned int endPosition = startPosition + lookupString.length();
-
-                    if (identifier.isValid && isCompatibleGlyph(identifier, isVerticalText, language, chars, startPosition, endPosition)) {
-                        ASSERT(characterLookupRange > 0);
-                        i += characterLookupRange - 1;
-                        m_walkerData.charsConsumed += characterLookupRange;
-
-                        foundGlyph = true;
-                        SVGGlyphElement::inheritUnspecifiedAttributes(identifier, m_fontData);
-                        break;
-                    }
+            Vector<SVGGlyphIdentifier> glyphs;
+            m_fontElement->getGlyphIdentifiersForString(lookupString, glyphs);
+            Vector<SVGGlyphIdentifier>::iterator it = glyphs.begin();
+            Vector<SVGGlyphIdentifier>::iterator end = glyphs.end();
+            
+            for (; it != end; ++it) {
+                identifier = *it;
+                
+                unsigned int startPosition = run.rtl() ? run.length() - (i + lookupString.length()) : i;
+                unsigned int endPosition = startPosition + lookupString.length();
+                
+                if (identifier.isValid && isCompatibleGlyph(identifier, isVerticalText, language, chars, startPosition, endPosition)) {
+                    ASSERT(characterLookupRange > 0);
+                    i += identifier.nameLength - 1;
+                    m_walkerData.charsConsumed += identifier.nameLength;
+                    
+                    foundGlyph = true;
+                    SVGGlyphElement::inheritUnspecifiedAttributes(identifier, m_fontData);
+                    break;
                 }
-
-                characterLookupRange--;
             }
 
+            
             if (!foundGlyph) {
                 ++m_walkerData.charsConsumed;
                 if (SVGMissingGlyphElement* element = m_fontElement->firstMissingGlyphElement()) {
