WebCore/svg/SVGFontElement.h
@@ -24,6 +24,7 @@
 #if ENABLE(SVG_FONTS)
 #include "SVGExternalResourcesRequired.h"
 #include "SVGGlyphElement.h"
+#include "SVGGlyphMap.h"
 #include "SVGStyledElement.h"
 
 namespace WebCore {
@@ -41,19 +42,15 @@ namespace WebCore {
         void addGlyphToCache(SVGGlyphElement*);
         void removeGlyphFromCache(SVGGlyphElement*);
 
-        const Vector<SVGGlyphIdentifier>& glyphIdentifiersForString(const String&) const;
-
-        // Returns the longest hash key length (the 'unicode' property value with the
-        // highest amount of characters) - ie. for <glyph unicode="ffl"/> it will return 3.
-        unsigned int maximumHashKeyLength() const { return m_maximumHashKeyLength; }
+        void getGlyphIdentifiersForString(const String&, Vector<SVGGlyphIdentifier>&) const;
 
         SVGMissingGlyphElement* firstMissingGlyphElement() const;
 
     private:
-        typedef HashMap<String, Vector<SVGGlyphIdentifier> > GlyphHashMap;
-        GlyphHashMap m_glyphMap;
+        void ensureGlyphCache() const;
 
-        unsigned int m_maximumHashKeyLength;
+        mutable SVGGlyphMap m_glyphMap;
+        mutable bool m_isGlyphCacheValid;
     };
 
 } // namespace WebCore
