WebCore/svg/SVGGlyphElement.h
@@ -51,9 +51,10 @@ namespace WebCore {
 
         SVGGlyphIdentifier()
             : isValid(false)
-            , priority(0)
             , orientation(Both)
             , arabicForm(None)
+            , priority(0)
+            , nameLength(0)
             , horizontalAdvanceX(0.0f)
             , verticalOriginX(0.0f)
             , verticalOriginY(0.0f)
@@ -83,10 +84,11 @@ namespace WebCore {
         }
 
         bool isValid : 1;
-        int priority;
 
         Orientation orientation : 2;
         ArabicForm arabicForm : 3;
+        int priority;
+        size_t nameLength;
         String glyphName;
 
         float horizontalAdvanceX;
